--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         .dark .glass-card { background: rgba(15, 23, 42, 0.8); border: 1px solid rgba(30, 41, 59, 0.5); }
         .pill { @apply px-3 py-1 rounded-full text-xs font-bold; }
         .pill-danger { @apply bg-red-100 text-red-600 dark:bg-red-900/30 dark:text-red-400; }
-        .pill-success { @apply bg-green-100 text-green-600 dark:bg-green-900/30 dark:text-green-400; }
         @keyframes slideIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .animate-in { animation: slideIn 0.5s ease-out forwards; }
     </style>
@@ -24,7 +23,7 @@
     <nav class="sticky top-0 z-50 glass-card border-b bg-white/70 dark:bg-slate-900/70">
         <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
             <div class="flex items-center gap-2 text-blue-600 font-extrabold text-xl">
-                <i data-lucide="shield-check"></i><span>核心健康看板</span>
+                <i data-lucide="shield-check"></i><span>健康核心看板</span>
             </div>
             <button onclick="document.documentElement.classList.toggle('dark')" class="p-2 rounded-full hover:bg-slate-200 dark:hover:bg-slate-800">
                 <i data-lucide="sun-moon"></i>
@@ -43,181 +42,6 @@
                 <div class="glass-card p-6 rounded-3xl flex justify-between items-center">
                     <div>
                         <div class="font-bold text-lg text-slate-800 dark:text-slate-100">魏主任</div>
-                        <div class="text-sm text-slate-500">周一、周五上午门诊</div>
+                        <div class="text-xs text-slate-500">周一、周五上午门诊</div>
                     </div>
-                    <a href="tel:15193131298" class="bg-blue-600 text-white px-4 py-2 rounded-xl text-sm font-bold flex items-center gap-2">
-                        <i data-lucide="phone" size="16"></i> 15193131298
-                    </a>
-                </div>
-                <div class="glass-card p-6 rounded-3xl flex justify-between items-center">
-                    <div>
-                        <div class="font-bold text-lg text-slate-800 dark:text-slate-100">杨医生</div>
-                        <div class="text-sm text-slate-500">周一下午门诊</div>
-                    </div>
-                    <a href="tel:17793170598" class="bg-blue-600 text-white px-4 py-2 rounded-xl text-sm font-bold flex items-center gap-2">
-                        <i data-lucide="phone" size="16"></i> 17793170598
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <section class="animate-in">
-            <div class="flex items-center gap-3 mb-6">
-                <i data-lucide="activity" class="text-blue-600"></i>
-                <h2 class="text-2xl font-bold">已确诊病情汇总</h2>
-            </div>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div class="glass-card p-6 rounded-3xl border-l-8 border-red-500">
-                    <span class="pill pill-danger mb-2 block w-fit">核心警报</span>
-                    <h3 class="font-bold">稳定型心绞痛</h3>
-                    <p class="text-sm text-slate-500 mt-2 italic">心脏主血管堵塞约 50% [cite: 2]</p>
-                </div>
-                <div class="glass-card p-6 rounded-3xl border-l-8 border-orange-500">
-                    <span class="pill pill-danger mb-2 block w-fit">极高危</span>
-                    <h3 class="font-bold">高血压病 2 级</h3>
-                    <p class="text-sm text-slate-500 mt-2">伴高血压性心脏病 [cite: 3]</p>
-                </div>
-                <div class="glass-card p-6 rounded-3xl border-l-8 border-blue-500">
-                    <span class="pill pill-danger mb-2 block w-fit">代谢注意</span>
-                    <h3 class="font-bold">桥本氏甲减</h3>
-                    <p class="text-sm text-slate-500 mt-2">需严格减少碘摄入 [cite: 4]</p>
-                </div>
-                <div class="lg:col-span-3 glass-card p-6 rounded-3xl flex flex-wrap gap-4 text-sm font-medium">
-                    <span class="flex items-center gap-2"><i data-lucide="check-square" size="16"></i> 高脂血症 [cite: 5]</span>
-                    <span class="flex items-center gap-2"><i data-lucide="check-square" size="16"></i> 颈动脉硬化斑块 [cite: 6]</span>
-                    <span class="flex items-center gap-2"><i data-lucide="check-square" size="16"></i> 主动脉硬化 [cite: 7]</span>
-                    <span class="flex items-center gap-2"><i data-lucide="check-square" size="16"></i> 脂肪肝 [cite: 8]</span>
-                </div>
-            </div>
-        </section>
-
-        <section class="animate-in">
-            <div class="flex items-center gap-3 mb-6">
-                <i data-lucide="pill" class="text-blue-600"></i>
-                <h2 class="text-2xl font-bold">用药时刻表</h2>
-            </div>
-            <div class="grid lg:grid-cols-2 gap-8">
-                <div class="space-y-4">
-                    <h3 class="flex items-center gap-2 text-orange-500 font-bold"><i data-lucide="sun"></i> 白天服药</h3>
-                    <div class="glass-card rounded-3xl overflow-hidden divide-y divide-slate-100 dark:divide-slate-800">
-                        <div class="p-5 flex justify-between items-center">
-                            <div><div class="font-bold">左甲状腺素钠片 (75ug)</div><div class="text-xs text-slate-400">治疗甲减 [cite: 71]</div></div>
-                            <div class="text-xl font-black text-blue-600">1.5 <span class="text-xs">片</span></div>
-                        </div>
-                        <div class="p-5 flex justify-between items-center">
-                            <div><div class="font-bold">沙库巴曲缬沙坦 (100mg)</div><div class="text-xs text-slate-400">降血压 [cite: 72]</div></div>
-                            <div class="text-xl font-black text-blue-600">1 <span class="text-xs">片</span></div>
-                        </div>
-                        <div class="p-5 flex justify-between items-center">
-                            <div><div class="font-bold">琥珀酸美托洛尔 (23.75mg)</div><div class="text-xs text-slate-400">降压+冠心病 [cite: 73]</div></div>
-                            <div class="text-xl font-black text-blue-600">0.5 <span class="text-xs">片</span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="space-y-4">
-                    <h3 class="flex items-center gap-2 text-indigo-500 font-bold"><i data-lucide="moon"></i> 晚上服药</h3>
-                    <div class="glass-card rounded-3xl overflow-hidden divide-y divide-slate-100 dark:divide-slate-800">
-                        <div class="p-5 flex justify-between items-center">
-                            <div><div class="font-bold">瑞舒伐他汀钙片 (10mg)</div><div class="text-xs text-slate-400">治疗冠心病 [cite: 75]</div></div>
-                            <div class="text-xl font-black text-indigo-500">1 <span class="text-xs">片</span></div>
-                        </div>
-                        <div class="p-5 flex justify-between items-center">
-                            <div><div class="font-bold">阿司匹林肠溶片 (100mg)</div><div class="text-xs text-slate-400">治疗冠心病 [cite: 76]</div></div>
-                            <div class="text-xl font-black text-indigo-500">1 <span class="text-xs">片</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="animate-in">
-            <div class="flex items-center gap-3 mb-6">
-                <i data-lucide="utensils" class="text-blue-600"></i>
-                <h2 class="text-2xl font-bold">全天饮食红黑榜</h2>
-            </div>
-            <div class="grid lg:grid-cols-2 gap-8">
-                <div class="glass-card p-8 rounded-[3rem] space-y-6">
-                    <div class="flex items-center gap-2 text-green-600 font-bold"><i data-lucide="check-circle-2"></i> 放心吃库</div>
-                    <div class="space-y-4 text-sm leading-relaxed">
-                        <div><b class="text-slate-700 dark:text-slate-300">早餐 [cite: 11]：</b>燕麦片 [cite: 12]、鸡蛋清 [cite: 13, 28]、全麦/杂粮面包/馒头 [cite: 14]、脱脂/低脂奶 [cite: 15]、无糖茶 [cite: 16]、玉米 [cite: 17]、红薯/紫薯 [cite: 18]、杂粮粥/饭 [cite: 19]。</div>
-                        <div><b class="text-slate-700 dark:text-slate-300">正餐 [cite: 21]：</b>菠菜、芹菜、生菜、西兰花 [cite: 22, 23]；西红柿、黄瓜、茄子、蘑菇 [cite: 24]；瘦鸡肉（去皮） [cite: 25]、鱼类（鳕鱼/巴沙鱼/鲈鱼） [cite: 26]；豆腐、豆类 [cite: 27]；鲜虾仁 [cite: 29]；瘦里脊/牛腱子 [cite: 30]。</div>
-                        <div><b class="text-slate-700 dark:text-slate-300">水果 [cite: 33]：</b>蓝莓、草莓、樱桃 [cite: 35]；苹果、梨 [cite: 37]；柑橘、柚子 [cite: 39]；葡萄、石榴 [cite: 41]；香蕉、猕猴桃 [cite: 43]。</div>
-                    </div>
-                </div>
-                <div class="glass-card p-8 rounded-[3rem] border-red-500/20 bg-red-50/20 dark:bg-red-900/10 space-y-6">
-                    <div class="flex items-center gap-2 text-red-500 font-bold"><i data-lucide="alert-triangle"></i> 严格避免</div>
-                    <div class="grid grid-cols-2 gap-4 text-xs">
-                        <div class="space-y-2">
-                            <span class="font-bold block mb-1">早餐黑榜 [cite: 20]</span>
-                            <p>牛肉面、油饼子、白馒头、糕点 [cite: 20]。</p>
-                        </div>
-                        <div class="space-y-2">
-                            <span class="font-bold block mb-1">肉类黑榜 [cite: 32]</span>
-                            <p>香肠、腊肉、午餐肉、肥牛、排骨、动物内脏 [cite: 32]。</p>
-                        </div>
-                        <div class="space-y-2">
-                            <span class="font-bold block mb-1">水果加餐 [cite: 44, 53]</span>
-                            <p>菠萝、榴莲、果脯、蜜饯、薯片、甜饮料 [cite: 45, 46, 53]。</p>
-                        </div>
-                        <div class="space-y-2">
-                            <span class="font-bold block mb-1">禁食提醒 [cite: 13, 20]</span>
-                            <p><b>严禁蛋黄</b> [cite: 13]；严禁油炸及精制谷物 [cite: 20]。</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="animate-in">
-            <div class="glass-card p-10 rounded-[4rem] bg-slate-900 text-white flex flex-col md:flex-row gap-10 items-center">
-                <div class="md:w-1/3 text-center md:text-left">
-                    <h3 class="text-3xl font-bold">超市购物排雷指南</h3>
-                    <p class="text-slate-400 mt-2 text-sm">拿起包装看背面的营养成分表 [cite: 77, 80]</p>
-                </div>
-                <div class="flex-1 grid sm:grid-cols-2 gap-8 w-full">
-                    <div class="p-6 bg-white/5 rounded-3xl">
-                        <div class="text-xs text-blue-400 font-bold mb-2 uppercase tracking-widest">钠含量 (每100g) [cite: 78]</div>
-                        <div class="text-3xl font-black">< 120mg</div>
-                        <p class="text-[10px] text-slate-500 mt-1">超过 600mg 为高钠，严禁购买 [cite: 78, 79]</p>
-                    </div>
-                    <div class="p-6 bg-white/5 rounded-3xl">
-                        <div class="text-xs text-purple-400 font-bold mb-2 uppercase tracking-widest">碳水化合物 (每100g) [cite: 80]</div>
-                        <div class="text-3xl font-black">< 10g</div>
-                        <p class="text-[10px] text-slate-500 mt-1">超过 20g 为高碳水，尽量避免 [cite: 80]</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="animate-in pb-10">
-            <div class="flex items-center gap-3 mb-6">
-                <i data-lucide="calendar" class="text-blue-600"></i>
-                <h2 class="text-2xl font-bold">复查计划进度</h2>
-            </div>
-            <div class="grid grid-cols-2 lg:grid-cols-4 gap-4">
-                <div class="glass-card p-6 rounded-3xl border-t-4 border-blue-600">
-                    <div class="text-xs text-slate-400 font-bold mb-1">甲减复查 </div>
-                    <div class="text-xl font-bold">2026-01-19</div>
-                </div>
-                <div class="glass-card p-6 rounded-3xl opacity-50">
-                    <div class="text-xs text-slate-400 font-bold mb-1">冠心病每3月复查 [cite: 87]</div>
-                    <div class="text-xl font-bold">2026-Q1</div>
-                </div>
-                <div class="glass-card p-6 rounded-3xl bg-blue-600 text-white text-center flex flex-col justify-center lg:col-span-2">
-                    <div class="text-xs font-bold opacity-80 uppercase tracking-widest">住院记录 [cite: 84]</div>
-                    <div class="text-lg font-bold">2025.12.09 - 12.17 </div>
-                </div>
-            </div>
-        </section>
-
-    </main>
-
-    <footer class="py-12 border-t border-slate-200 dark:border-slate-800 text-center">
-        <p class="text-xs text-slate-400 italic">© 2026 深度健康管理 · 数据源自病历注意事项 </p>
-    </footer>
-
-    <script>
-        lucide.createIcons();
-    </script>
-</body>
-</html>
+                    <a href="tel:151
