--- a/index.html
+++ b/index.html
@@ -44,4 +44,169 @@
                         <div class="font-bold text-lg text-slate-800 dark:text-slate-100">魏主任</div>
                         <div class="text-xs text-slate-500">周一、周五上午门诊</div>
                     </div>
-                    <a href="tel:151
+                    <a href="tel:15193131298" class="bg-blue-600 text-white px-4 py-2 rounded-xl text-sm font-bold flex items-center gap-2">
+                        <i data-lucide="phone" size="16"></i> 15193131298
+                    </a>
+                </div>
+                <div class="glass-card p-6 rounded-3xl flex justify-between items-center">
+                    <div>
+                        <div class="font-bold text-lg text-slate-800 dark:text-slate-100">杨医生</div>
+                        <div class="text-xs text-slate-500">周一下午门诊</div>
+                    </div>
+                    <a href="tel:17793170598" class="bg-blue-600 text-white px-4 py-2 rounded-xl text-sm font-bold flex items-center gap-2">
+                        <i data-lucide="phone" size="16"></i> 17793170598
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="animate-in">
+            <div class="flex items-center gap-3 mb-6">
+                <i data-lucide="activity" class="text-blue-600"></i>
+                <h2 class="text-2xl font-bold">确诊病情汇总</h2>
+            </div>
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <div class="glass-card p-5 rounded-2xl border-l-4 border-red-500">
+                    <h3 class="font-bold text-sm">稳定型心绞痛</h3>
+                    <p class="text-xs text-slate-500 mt-1">主血管堵塞 50%</p>
+                </div>
+                <div class="glass-card p-5 rounded-2xl border-l-4 border-orange-500">
+                    <h3 class="font-bold text-sm">高血压 2 级</h3>
+                    <p class="text-xs text-slate-500 mt-1">极高危 / 伴心脏病</p>
+                </div>
+                <div class="glass-card p-5 rounded-2xl border-l-4 border-blue-500">
+                    <h3 class="font-bold text-sm">桥本氏甲减</h3>
+                    <p class="text-xs text-slate-500 mt-1">需减少碘摄入</p>
+                </div>
+                <div class="glass-card p-5 rounded-2xl border-l-4 border-slate-400">
+                    <h3 class="font-bold text-sm">高脂血症 / 脂肪肝</h3>
+                    <p class="text-xs text-slate-500 mt-1">需严格控脂</p>
+                </div>
+            </div>
+            <div class="mt-4 flex flex-wrap gap-2">
+                <span class="pill bg-slate-100 dark:bg-slate-800 text-slate-500 text-[10px]">双侧颈总动脉硬化并斑块</span>
+                <span class="pill bg-slate-100 dark:bg-slate-800 text-slate-500 text-[10px]">主动脉硬化</span>
+            </div>
+        </section>
+
+        <section class="animate-in">
+            <div class="flex items-center gap-3 mb-6">
+                <i data-lucide="pill" class="text-blue-600"></i>
+                <h2 class="text-2xl font-bold">每日用药时刻表</h2>
+            </div>
+            <div class="grid lg:grid-cols-2 gap-8">
+                <div class="space-y-4">
+                    <h3 class="flex items-center gap-2 text-orange-500 font-bold ml-2"><i data-lucide="sun"></i> 白天服药</h3>
+                    <div class="glass-card rounded-3xl overflow-hidden divide-y divide-slate-100 dark:divide-slate-800">
+                        <div class="p-5 flex justify-between items-center">
+                            <div><div class="font-bold text-sm">左甲状腺素钠片 (75ug)</div><div class="text-[10px] text-slate-400">用途：甲减</div></div>
+                            <div class="text-xl font-black text-blue-600">1.5 <span class="text-xs">片</span></div>
+                        </div>
+                        <div class="p-5 flex justify-between items-center">
+                            <div><div class="font-bold text-sm">沙库巴曲缬沙坦 (100mg)</div><div class="text-[10px] text-slate-400">用途：降血压</div></div>
+                            <div class="text-xl font-black text-blue-600">1 <span class="text-xs">片</span></div>
+                        </div>
+                        <div class="p-5 flex justify-between items-center">
+                            <div><div class="font-bold text-sm">琥珀酸美托洛尔 (23.75mg)</div><div class="text-[10px] text-slate-400">用途：降压/冠心病</div></div>
+                            <div class="text-xl font-black text-blue-600">0.5 <span class="text-xs">片</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="space-y-4">
+                    <h3 class="flex items-center gap-2 text-indigo-500 font-bold ml-2"><i data-lucide="moon"></i> 晚上服药</h3>
+                    <div class="glass-card rounded-3xl overflow-hidden divide-y divide-slate-100 dark:divide-slate-800">
+                        <div class="p-5 flex justify-between items-center">
+                            <div><div class="font-bold text-sm">瑞舒伐他汀钙片 (10mg)</div><div class="text-[10px] text-slate-400">用途：冠心病</div></div>
+                            <div class="text-xl font-black text-indigo-500">1 <span class="text-xs">片</span></div>
+                        </div>
+                        <div class="p-5 flex justify-between items-center">
+                            <div><div class="font-bold text-sm">阿司匹林肠溶片 (100mg)</div><div class="text-[10px] text-slate-400">用途：抗血栓</div></div>
+                            <div class="text-xl font-black text-indigo-500">1 <span class="text-xs">片</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="animate-in">
+            <div class="flex items-center gap-3 mb-6">
+                <i data-lucide="utensils" class="text-blue-600"></i>
+                <h2 class="text-2xl font-bold">饮食管理方案</h2>
+            </div>
+            <div class="grid lg:grid-cols-2 gap-8">
+                <div class="glass-card p-8 rounded-[3rem] space-y-6">
+                    <div class="flex items-center gap-2 text-green-600 font-bold"><i data-lucide="check-circle"></i> 推荐健康食物</div>
+                    <div class="space-y-4 text-xs leading-relaxed text-slate-500">
+                        <p><b>早餐方案：</b>无糖燕麦片、<b>仅限蛋清</b>、全麦/杂粮面包馒头、脱脂奶、无糖茶（龙井/普洱）、玉米、红紫薯。</p>
+                        <p><b>正餐方案：</b>菠菜、芹菜、西兰花等绿叶菜；瘦鸡肉（去皮）、鳕鱼、鲈鱼、豆腐、虾仁、瘦牛里脊。</p>
+                        <p><b>水果方案：</b>蓝莓（推荐）、草莓、苹果、梨、橙子、柚子、香蕉、猕猴桃。</p>
+                    </div>
+                </div>
+                <div class="glass-card p-8 rounded-[3rem] bg-red-50/20 dark:bg-red-900/10">
+                    <div class="flex items-center gap-2 text-red-500 font-bold mb-6"><i data-lucide="x-circle"></i> 严格禁止/避免</div>
+                    <div class="grid grid-cols-2 gap-4 text-[11px] text-slate-500">
+                        <div>
+                            <span class="pill pill-danger mb-2 inline-block">严禁</span>
+                            <p>蛋黄、肥肉、动物内脏、油饼、油果子、牛肉面、白馒头。</p>
+                        </div>
+                        <div>
+                            <span class="pill pill-danger mb-2 inline-block">禁加工</span>
+                            <p>香肠、腊肉、午餐肉、薯片、饼干、甜饮料、果脯蜜饯。</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="animate-in">
+            <div class="glass-card p-8 rounded-[3rem] bg-slate-900 text-white flex flex-col md:flex-row justify-between items-center gap-6">
+                <div class="text-center md:text-left">
+                    <h3 class="text-xl font-bold italic">超市购物“排雷”准则</h3>
+                    <p class="text-slate-400 text-xs mt-1 font-medium">查看每 100g 营养成分表</p>
+                </div>
+                <div class="flex gap-4">
+                    <div class="text-center">
+                        <div class="text-2xl font-black text-blue-400">< 120mg</div>
+                        <div class="text-[10px] uppercase opacity-60">钠含量 (理想)</div>
+                    </div>
+                    <div class="w-px h-10 bg-white/10"></div>
+                    <div class="text-center">
+                        <div class="text-2xl font-black text-purple-400">< 10g</div>
+                        <div class="text-[10px] uppercase opacity-60">碳水 (理想)</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="animate-in pb-10">
+            <div class="flex items-center gap-3 mb-6">
+                <i data-lucide="calendar" class="text-blue-600"></i>
+                <h2 class="text-2xl font-bold">重要节点记录</h2>
+            </div>
+            <div class="grid grid-cols-2 lg:grid-cols-4 gap-4">
+                <div class="glass-card p-6 rounded-3xl border-t-4 border-blue-600">
+                    <div class="text-[10px] font-bold text-slate-400 uppercase">甲减下次复查</div>
+                    <div class="text-lg font-bold">2026-01-19</div>
+                </div>
+                <div class="glass-card p-6 rounded-3xl border-t-4 border-slate-300">
+                    <div class="text-[10px] font-bold text-slate-400 uppercase">冠心病复查频率</div>
+                    <div class="text-lg font-bold">每 3 个月一次</div>
+                </div>
+                <div class="lg:col-span-2 glass-card p-6 rounded-3xl bg-blue-50/50 dark:bg-slate-800/30 flex items-center justify-between">
+                    <div class="text-xs text-slate-500 italic">2025.12.09 入院 —— 12.17 出院</div>
+                    <i data-lucide="clipboard-check" class="text-blue-300"></i>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="py-10 text-center text-slate-400 text-[10px]">
+        <p>© 2026 个人健康数字看板 · 祝您早日康复</p>
+    </footer>
+
+    <script>
+        lucide.createIcons();
+    </script>
+</body>
+</html>
